--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.7.1",
+    "chart.js": "^4.4.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.207",
+    "@iconify/tailwind": "^1.0.1",
     "daisyui": "^4.10.5",
     "tailwindcss-animated": "^1.0.1"
   }
